postgres/dbm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-jhlee11
  namespace: database-pg
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: postgres-jhlee11
  template:
    metadata:
      labels:
        app: postgres-jhlee11
    spec:
      containers:
      - image: postgres:12
        name: postgresql
        ports:
        - containerPort: 5432
