postgres/dbm-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-jhlee11
  namespace: database-pg
spec:
  type: LoadBalancer
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: postgres-jhlee11
