postgres/dbm-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-jhlee11
  namespace: database-pg
spec:
  ports:
  - port: 80
    targetPort: 5432
  selector:
    app: postgres-jhlee11
