postgres/dbm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  annotations:
    ingressClassName: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
  namespace: database-pg
  labels:
    app: postgres-jhlee11
spec:
  rules:
    - host: psql-jhlee11.tech.cookapps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "postgres-jhlee11"
                port:
                  number: 5432
